## Imidiate Plans:
# naubino namespace
# global object size handling ( keep_distance, spring length and so on)
# color palettes also handle background and join color
# cycle checking
# modi ( scriptable levels )
# naub animation

	* added: focused naubs now glow (yes! I procrastinated)