@@ -1,0 +1,1 @@
+graph G { 3 -- 4 11 -- 13 13 -- 20 5 -- 11 4 -- 5 5 -- 3 3 -- 18 3 -- 19 3 -- 20 18 -- 13 11 -- 25 19 -- 25 19 -- 13 5 -- 15 5 -- 16}
