@@ -9,7 +9,6 @@ body {
 }
 canvas {
     margin:auto;
-    margin-top: 20px;
     display:block;
     border:1px solid gray;
     background-color: #fff;
